--- a/miniprogram/pages/rank/rank.less
+++ b/miniprogram/pages/rank/rank.less
@@ -63,7 +63,7 @@
   width: 100%;
   height: 100%;
 
-  .item{
+  .item {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -103,7 +103,7 @@
     .rank-number {
       margin-left: 20rpx;
       text-align: center;
-      margin-right: -15rpx;  
+      margin-right: -15rpx;
       font-size: 45rpx;
       color: black;
       background-color: rgba(166, 160, 169, 0.6);
@@ -119,8 +119,8 @@
     }
 
     .name {
-      width: 50%;
-      padding: 0 20rpx;
+      width: 35%;
+      margin-left: 20rpx;
       color: black;
       flex-grow: 1;
       white-space: nowrap;
@@ -145,13 +145,13 @@
 
 .my-rank {
   position: absolute;
-    bottom: 70rpx;
-    width: 95%;
-    display: flex;
-    align-items: center;
-    padding: 20rpx;
-    background: #b8cef5;
-    border-radius: 20rpx;
+  bottom: 70rpx;
+  width: 95%;
+  display: flex;
+  align-items: center;
+  padding: 20rpx;
+  background: #b8cef5;
+  border-radius: 20rpx;
 }
 
 .my-rank .avatar {
@@ -168,5 +168,3 @@
 .my-rank-number {
   font-weight: bold;
 }
-
-
